@@ -4,6 +4,8 @@ Changelog
 1.5.1 (xx.xx.xxxx) - IN DEVELOPMENT
 ~~~~~~~~~~~~~~~~~~
 
+ * Fix: When editing a document link in rich text, the document ID is no longer erroneously interpreted as a page ID (Stephen Rice)
+
 
 1.5 (31.05.2016)
 ~~~~~~~~~~~~~~~~
